# claude-sandbox

./: .gitignore  README.md  claude-hooks-server  claude-sandbox  claude_sandbox.py  hook.sh  rebuild-tools-vm  tools-vm.yaml
audio-proxy/: macos-audio-server  vm-rec-wrapper
tests/: conftest.py  pyproject.toml  test_commands.py  test_integration.py  test_unit.py
tests/fakes/: _fake.py  uuidgen
